# AmaTradeCore

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs-pages.yml
docs-site/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs-site/scripts/: copy-spa-fallback.mjs
docs-site/src/: app.tsx  main.tsx  styles.css  types.ts
docs-site/src/content/: index.ts
docs-site/src/content/en/: cli-guide.ts  collector-modes.ts  configuration.ts  data-models.ts  faq.ts  getting-started.ts  overview.ts
docs-site/src/content/ru/: cli-guide.ts  collector-modes.ts  configuration.ts  data-models.ts  faq.ts  getting-started.ts  overview.ts
src/: config.py  main.py
src/amatradecore/api/: websocket.py
src/api/: __init__.py  client.py  websocket.py
src/models/: __init__.py  market.py
tests/: test_api_client.py  test_config.py  test_docs_site.py  test_main.py  test_market_models.py  test_websocket.py
